--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,24 +19,28 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Cache Python packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Build MacOS (Intel)
-        run: python3 compile.py
+        run: python compile.py
 
-      - name: Zip QuietDaemon.app (Intel)
-        run: |
-          cd dist
-          zip -r "QuietDaemon_macOS_intel.zip" QuietDaemon.app
+      - name: Ensure dist directory exists
+        run: mkdir -p dist
 
-      - name: Upload ZIP (Intel)
+      - name: Upload QuietDaemon.app (Intel)
         uses: actions/upload-artifact@v4
         with:
           name: QuietDaemon_macOS_intel
-          path: dist/QuietDaemon_macOS_intel.zip
+          path: dist/QuietDaemon.app
 
   build-macos-arm:
     runs-on: macos-latest
@@ -49,24 +53,28 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Cache Python packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Build MacOS (ARM)
-        run: python3 compile.py
+        run: python compile.py
 
-      - name: Zip QuietDaemon.app (ARM)
-        run: |
-          cd dist
-          zip -r "QuietDaemon_macOS_arm.zip" QuietDaemon.app
+      - name: Ensure dist directory exists
+        run: mkdir -p dist
 
-      - name: Upload ZIP (ARM)
+      - name: Upload QuietDaemon.app (ARM)
         uses: actions/upload-artifact@v4
         with:
           name: QuietDaemon_macOS_arm
-          path: dist/QuietDaemon_macOS_arm.zip
+          path: dist/QuietDaemon.app
 
   build-windows:
     runs-on: windows-latest
@@ -79,6 +87,12 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Cache Python packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -87,13 +101,11 @@ jobs:
       - name: Build Windows
         run: python compile.py
 
-      - name: Zip QuietDaemon
-        run: |
-          cd dist
-          Compress-Archive -Path QuietDaemon -DestinationPath "QuietDaemon_Windows.zip"
+      - name: Ensure dist directory exists
+        run: mkdir -p dist
 
-      - name: Upload ZIP (Windows)
+      - name: Upload QuietDaemon.exe
         uses: actions/upload-artifact@v4
         with:
           name: QuietDaemon_Windows
-          path: dist/QuietDaemon_Windows.zip
+          path: dist/QuietDaemon.exe
