--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,28 +19,24 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Cache Python packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Build MacOS (Intel)
-        run: python compile.py
+        run: python3 compile.py
 
-      - name: Ensure dist directory exists
-        run: mkdir -p dist
+      - name: Zip QuietDaemon.app (Intel)
+        run: |
+          cd dist
+          zip -r "QuietDaemon_macOS_intel.zip" QuietDaemon.app/*
 
-      - name: Upload QuietDaemon.app (Intel)
+      - name: Upload ZIP (Intel)
         uses: actions/upload-artifact@v4
         with:
           name: QuietDaemon_macOS_intel
-          path: dist/QuietDaemon.app
+          path: dist/QuietDaemon_macOS_intel.zip
 
   build-macos-arm:
     runs-on: macos-latest
@@ -53,28 +49,24 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Cache Python packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Build MacOS (ARM)
-        run: python compile.py
+        run: python3 compile.py
 
-      - name: Ensure dist directory exists
-        run: mkdir -p dist
+      - name: Zip QuietDaemon.app (ARM)
+        run: |
+          cd dist
+          zip -r "QuietDaemon_macOS_arm.zip" QuietDaemon.app/*
 
-      - name: Upload QuietDaemon.app (ARM)
+      - name: Upload ZIP (ARM)
         uses: actions/upload-artifact@v4
         with:
           name: QuietDaemon_macOS_arm
-          path: dist/QuietDaemon.app
+          path: dist/QuietDaemon_macOS_arm.zip
 
   build-windows:
     runs-on: windows-latest
@@ -87,12 +79,6 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Cache Python packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -101,11 +87,13 @@ jobs:
       - name: Build Windows
         run: python compile.py
 
-      - name: Ensure dist directory exists
-        run: mkdir -p dist
+      - name: Zip QuietDaemon (Windows)
+        run: |
+          cd dist
+          Compress-Archive -Path QuietDaemon\* -DestinationPath "QuietDaemon_Windows.zip"
 
-      - name: Upload QuietDaemon.exe
+      - name: Upload ZIP (Windows)
         uses: actions/upload-artifact@v4
         with:
           name: QuietDaemon_Windows
-          path: dist/QuietDaemon.exe
+          path: dist/QuietDaemon_Windows.zip
