--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,12 +30,12 @@ jobs:
       - name: Zip QuietDaemon.app (Intel)
         run: |
           cd dist
-          zip -r -9 "QuietDaemon_macOS_intel.zip" QuietDaemon.app
+          zip -r "QuietDaemon_macOS_intel.zip" QuietDaemon.app
 
       - name: Upload ZIP (Intel)
         uses: actions/upload-artifact@v4
         with:
-          name: QuietDaemon_macOS_intel.zip
+          name: QuietDaemon_macOS_intel
           path: dist/QuietDaemon_macOS_intel.zip
 
   build-macos-arm:
@@ -60,12 +60,12 @@ jobs:
       - name: Zip QuietDaemon.app (ARM)
         run: |
           cd dist
-          zip -r -9 "QuietDaemon_macOS_arm.zip" QuietDaemon.app
+          zip -r "QuietDaemon_macOS_arm.zip" QuietDaemon.app
 
       - name: Upload ZIP (ARM)
         uses: actions/upload-artifact@v4
         with:
-          name: QuietDaemon_macOS_arm.zip
+          name: QuietDaemon_macOS_arm
           path: dist/QuietDaemon_macOS_arm.zip
 
   build-windows:
@@ -95,5 +95,5 @@ jobs:
       - name: Upload ZIP (Windows)
         uses: actions/upload-artifact@v4
         with:
-          name: QuietDaemon_Windows.zip
+          name: QuietDaemon_Windows
           path: dist/QuietDaemon_Windows.zip
