--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Zip QuietDaemon.app (Intel)
         run: |
           cd dist
-          zip -r "QuietDaemon_macOS_intel.zip" QuietDaemon.app
+          zip -r -9 "QuietDaemon_macOS_intel.zip" QuietDaemon.app
 
       - name: Upload ZIP (Intel)
         uses: actions/upload-artifact@v4
@@ -60,7 +60,7 @@ jobs:
       - name: Zip QuietDaemon.app (ARM)
         run: |
           cd dist
-          zip -r "QuietDaemon_macOS_arm.zip" QuietDaemon.app
+          zip -r -9 "QuietDaemon_macOS_arm.zip" QuietDaemon.app
 
       - name: Upload ZIP (ARM)
         uses: actions/upload-artifact@v4
