--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,36 +8,6 @@ on:
         required: true
 
 jobs:
-  build-macos-intel:
-    runs-on: macos-13
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Build MacOS (Intel)
-        run: python3 compile.py
-
-      - name: Zip QuietDaemon.app (Intel)
-        run: |
-          cd dist
-          zip -r -9 "QuietDaemon_macOS_intel.zip" QuietDaemon.app
-
-      - name: Upload ZIP (Intel)
-        uses: actions/upload-artifact@v4
-        with:
-          name: QuietDaemon_macOS_intel
-          path: dist/QuietDaemon_macOS_intel.zip
-
   build-macos-arm:
     runs-on: macos-latest
     steps:
@@ -48,6 +18,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
+      - name: Clean dist directory
+        run: rm -rf dist/*
 
       - name: Install dependencies
         run: |
@@ -68,6 +41,40 @@ jobs:
           name: QuietDaemon_macOS_arm
           path: dist/QuietDaemon_macOS_arm.zip
 
+  build-macos-intel:
+    runs-on: macos-13
+    needs: build-macos-arm  # Ensure ARM build completes first
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Clean dist directory
+        run: rm -rf dist/*
+
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Build MacOS (Intel)
+        run: python3 compile.py
+
+      - name: Zip QuietDaemon.app (Intel)
+        run: |
+          cd dist
+          zip -r -9 "QuietDaemon_macOS_intel.zip" QuietDaemon.app
+
+      - name: Upload ZIP (Intel)
+        uses: actions/upload-artifact@v4
+        with:
+          name: QuietDaemon_macOS_intel
+          path: dist/QuietDaemon_macOS_intel.zip
+
   build-windows:
     runs-on: windows-latest
     steps:
@@ -78,6 +85,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
+      - name: Clean dist directory
+        run: if (Test-Path -Path dist) { Remove-Item -Recurse -Force dist/* }
 
       - name: Install dependencies
         run: |
